[gd_scene load_steps=3 format=3 uid="uid://dh0dj6qdbfrb0"]

[ext_resource type="Script" path="res://src/ui_elements/rect_field.gd" id="1_fmk5c"]
[ext_resource type="PackedScene" uid="uid://dad7fkhmsooc6" path="res://src/ui_elements/number_edit.tscn" id="2_6tsid"]

[node name="RectField" type="HBoxContainer"]
offset_right = 64.0
offset_bottom = 22.0
script = ExtResource("1_fmk5c")

[node name="XField" parent="." instance=ExtResource("2_6tsid")]
custom_minimum_size = Vector2(54, 22)
layout_mode = 2
auto_emit_changed = false

[node name="YField" parent="." instance=ExtResource("2_6tsid")]
custom_minimum_size = Vector2(54, 22)
layout_mode = 2
auto_emit_changed = false

[node name="WField" parent="." instance=ExtResource("2_6tsid")]
custom_minimum_size = Vector2(54, 22)
layout_mode = 2
allow_lower = false
auto_emit_changed = false

[node name="HField" parent="." instance=ExtResource("2_6tsid")]
custom_minimum_size = Vector2(54, 22)
layout_mode = 2
allow_lower = false
auto_emit_changed = false

[connection signal="value_changed" from="XField" to="." method="_on_x_field_value_changed"]
[connection signal="value_changed" from="YField" to="." method="_on_y_field_value_changed"]
[connection signal="value_changed" from="WField" to="." method="_on_w_field_value_changed"]
[connection signal="value_changed" from="HField" to="." method="_on_h_field_value_changed"]
